force-app/main/default/objects/Bloom_Document__c/Bloom_Document__c.object-meta.xml
<CustomObject>
    <label>Bloom Document</label>
    <nameField>
        <label>Bloom Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bloom Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>