force-app/main/default/objects/Bloom_Document__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Emirates ID Front</fullName>
            </value>
            <value>
                <fullName>Emirates ID Back</fullName>
            </value>
            <value>
                <fullName>EJARI</fullName>
            </value>
            <value>
                <fullName>Tawtheeq</fullName>
            </value>
            <value>
                <fullName>Title Deed</fullName>
            </value>
            <value>
                <fullName>Passport</fullName>
            </value>
            <value>
                <fullName>Tourism License</fullName>
            </value>
            <value>
                <fullName>Unit Permit</fullName>
            </value>
            <value>
                <fullName>Trade License</fullName>
            </value>
            <value>
                <fullName>Company ID</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>