force-app/main/default/objects/Bloom_Document__c/fields/Module__c.field-meta.xml
<CustomField>
    <fullName>Module__c</fullName>
    <label>Module</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Move In</fullName>
            </value>
            <value>
                <fullName>Access Permit</fullName>
            </value>
            <value>
                <fullName>Amenity Reservation</fullName>
            </value>
            <value>
                <fullName>Guest Management</fullName>
            </value>
            <value>
                <fullName>Access Cards</fullName>
            </value>
            <value>
                <fullName>Service Charges</fullName>
            </value>
            <value>
                <fullName>Vacation Mode</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Move Out</fullName>
            </value>
            <value>
                <fullName>Profile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>