force-app/main/default/objects/Bloom_Document__c/fields/RFI_Comments__c.field-meta.xml
<CustomField>
    <fullName>RFI_Comments__c</fullName>
    <label>RFI Comments</label>
    <length>12000</length>
    <type>LongTextArea</type>
</CustomField>