force-app/main/default/objects/Bloom_Document__c/fields/Uploaded_By_Email__c.field-meta.xml
<CustomField>
    <fullName>Uploaded_By_Email__c</fullName>
    <label>Uploaded By Email</label>
    <type>Email</type>
</CustomField>